Fixed an error where the servicebar would hide behind it's placeholder

--- a/static_files/scss/jj-shared.scss
+++ b/static_files/scss/jj-shared.scss
@@ -727,8 +727,12 @@
     @include filter(grayscale(1));
 }
 
-#servicebar .brand {
-    background-color : transparent;
+#servicebar {
+    @include backface-visibility(hidden);
+
+    .brand {
+        background-color : transparent;
+    }
 }
 
 /* category banner heading text */
